--- a/lib/Makefile
+++ b/lib/Makefile
@@ -4,16 +4,16 @@ AR=arm-none-eabi-ar
 ###########################################
 
 vpath %.c src src/peripherals
-vpath %.c src/core
+vpath %.c src/maths
 
-CFLAGS  = -g -O3 -Wall
+CFLAGS  = -g -O2 -Wall
 CFLAGS += -mlittle-endian -mthumb -mcpu=cortex-m4 -mthumb-interwork
 CFLAGS += -mfloat-abi=hard -mfpu=fpv4-sp-d16
 CFLAGS += -ffreestanding -nostdlib
-CFLAGS += -Iinc -Iinc/core -Iinc/peripherals
+CFLAGS += -Iinc -Iinc/maths
 CFLAGS += -D__FPU_PRESENT=1 -D__FPU_USED=1
 
-SRCS = misc.c arm_sin_f32.c arm_cos_f32.c
+SRCS = system_stm32f4xx.c arm_sin_f32.c arm_cos_f32.c
 
 OBJS = $(SRCS:.c=.o)
 
