--- a/lib/Makefile
+++ b/lib/Makefile
@@ -6,14 +6,19 @@ AR=arm-none-eabi-ar
 vpath %.c src src/peripherals
 vpath %.c src/maths
 
-CFLAGS  = -g -O2 -Wall
+CFLAGS  = -O3 -Wall
 CFLAGS += -mlittle-endian -mthumb -mcpu=cortex-m4 -mthumb-interwork
 CFLAGS += -mfloat-abi=hard -mfpu=fpv4-sp-d16
 CFLAGS += -ffreestanding -nostdlib
-CFLAGS += -Iinc -Iinc/maths
-CFLAGS += -D__FPU_PRESENT=1 -D__FPU_USED=1
+CFLAGS += -ffunction-sections -fdata-sections
+CFLAGS += -Iinc -Iinc/core -Iinc/maths
+CFLAGS += -D__FPU_PRESENT=1
+CFLAGS += -DARM_TABLE_SIN_F32
+# CFLAGS += -D__FPU_USED=1
 
-SRCS = system_stm32f4xx.c arm_sin_f32.c arm_cos_f32.c
+SRCS = system_stm32f4xx.c \
+	arm_common_tables.c \
+	arm_sin_f32.c arm_cos_f32.c arm_sin_q15.c
 
 OBJS = $(SRCS:.c=.o)
 
